--- a/Projects/projectpage.css
+++ b/Projects/projectpage.css
@@ -296,12 +296,31 @@ pre code {
     margin-bottom: 20px; /* Add space below the slider and caption */
 }
 
+.imageSlider-container-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%; /* Make the container responsive */
+    max-width: 500px; /* Optional max width */
+    height: 100px;
+    margin-bottom: 110px; /* Add space below the slider and caption */
+}
+
 /* Image Slider */
 .imageSlider {
     position: relative;
     width: 100%; /* Full width responsiveness */
     max-width: 500px; /* Maintain a max width */
     height: 500px; /* Fixed height or adjust as needed */
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
+}
+
+.imageSlider-1 {
+    position: relative;
+    width: 100%; /* Full width responsiveness */
+    max-width: 400px; /* Maintain a max width */
+    height: 170px; /* Fixed height or adjust as needed */
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
 }
@@ -315,7 +334,24 @@ pre code {
     font-style: italic;
 }
 
+.imageSlider-caption-1 {
+    margin-top: 50%;
+    font-size: 14px;
+    color: #a68ab7;
+    text-align: center;
+    font-style: italic;
+}
+
 .imageSlider-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    user-select: none;
+    border-radius: inherit;
+}
+
+.imageSlider-wrapper-1 {
     position: absolute;
     width: 100%;
     height: 100%;
